--- a/src/scss/utils/_responsive.scss
+++ b/src/scss/utils/_responsive.scss
@@ -5,31 +5,48 @@
 }
 
 @media (max-width: 870px) {
-  .todo {
-    display: block;
-  }  
+  header {
+    h1 {
+      font-size: 4.5rem;
+    }
+  }
+
+  main {
+    section.about, section.contact {
+      padding: var(--spacing-large);
+    }
+
+    section.contact {
+      a {
+        font-size: 1.6rem;
+      }
+    }
+  }
+
+  .modal-overlay {
+    .modal.modal-info {
+      max-width: inherit;
+      width: 90%;
+
+      p {
+        font-size: 1.2rem;
+
+        &.close-modal {
+          font-size: 3rem;
+        }
+      }
+    }
+  }
 }
 
-@media (max-width: 512px) {
-  .todo {
-    display: block;
-  }  
-}
+@media (max-width: 680px) {
+  main {
+    section.book {
+      padding: var(--spacing-large) var(--spacing);
 
-@media (max-height: 740px) {
-  .todo {
-    display: block;
-  }  
-}
-
-@media (max-height: 630px) {
-  .todo {
-    display: block;
-  }  
-}
-
-@media (max-height: 512px) {
-  .todo {
-    display: block;
-  }  
+      .gallery-container {
+        grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
+      }
+    }
+  }
 }
