--- a/src/scss/vd.scss
+++ b/src/scss/vd.scss
@@ -118,7 +118,7 @@ main {
 
   section.about {
     background: linear-gradient(300deg, var(--color-main-darker) 0%, var(--color-alt-1) 100%);
-    padding: var(--spacing-large) 33%;
+    padding: var(--spacing-large) 25%;
 
     p {
       text-align: justify;
@@ -210,7 +210,63 @@ main {
     }
   }
 }
+/* Switch checkbox style */
+.bw-switch-container {
+  align-content: center;
+  display: flex;
+  justify-content: center;
 
+  p {
+    display: inline-block;
+    margin: 0;
+  }
+
+  .switch-wrapper {
+    align-items: center;
+    display: flex;
+    flex: 1;
+    height: 100%;
+    justify-content: center;
+    max-width: 5rem;
+    user-select: none;
+    width: 5rem;
+
+    input[type="checkbox"].switch {
+      appearance: none;
+      cursor: pointer;
+      height: calc(1.6rem + 2px);
+      background-color: rgb(255, 107, 103);
+      border: solid 1px rgb(127, 127, 127);
+      border-radius: 3rem;
+      margin: 0;
+      position: relative;
+      outline: none;
+      width: 3.6rem;
+      transition: all .3s ease-in-out;
+
+      &::after {
+        content: '';
+        background: white;
+        border-radius: 50%;
+        box-shadow: 0 0 .25rem rgba(0, 0, 0, .9);
+        height: 1.6rem;
+        left: 0;
+        position: absolute;
+        transform: scale(.7);
+        width: 1.6rem;
+        transition: all .3s ease-in-out;
+      }
+      
+      &:checked {
+        background-color: rgb(86, 212, 91);
+      }
+      
+      &:checked::after {
+        left: calc(100% - 1.6rem);
+      }
+    }
+  }
+}
 /* Loader while page is being set */
 .loading-overlay {
   background-color: var(--color-bg);
