fix: replace info modal target to p

--- a/src/scss/vd.scss
+++ b/src/scss/vd.scss
@@ -188,7 +188,7 @@ main {
       }
     }
 
-    span {
+    p:last-of-type {
       color: var(--color-main-darker);
       cursor: pointer;
       font-style: italic;
